[gd_scene load_steps=2 format=3 uid="uid://bshedctkkfesf"]

[ext_resource type="Script" path="res://password_hash.gd" id="1_paxkp"]

[node name="PasswordHash" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16
script = ExtResource("1_paxkp")

[node name="Widgets" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Password" type="LineEdit" parent="Widgets"]
layout_mode = 2
placeholder_text = "Password"

[node name="Salt" type="HBoxContainer" parent="Widgets"]
layout_mode = 2

[node name="Value" type="LineEdit" parent="Widgets/Salt"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Salt"

[node name="Randomize" type="Button" parent="Widgets/Salt"]
layout_mode = 2
text = "Random"

[node name="Iterations" type="HBoxContainer" parent="Widgets"]
layout_mode = 2

[node name="Label" type="Label" parent="Widgets/Iterations"]
layout_mode = 2
size_flags_horizontal = 3
text = "Iterations"

[node name="Value" type="SpinBox" parent="Widgets/Iterations"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 4.0

[node name="Memory" type="HBoxContainer" parent="Widgets"]
layout_mode = 2

[node name="Label" type="Label" parent="Widgets/Memory"]
layout_mode = 2
size_flags_horizontal = 3
text = "Memory"

[node name="Units" type="OptionButton" parent="Widgets/Memory"]
layout_mode = 2

[node name="Value" type="SpinBox" parent="Widgets/Memory"]
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 9.0

[node name="OutputSize" type="HBoxContainer" parent="Widgets"]
layout_mode = 2

[node name="Label" type="Label" parent="Widgets/OutputSize"]
layout_mode = 2
size_flags_horizontal = 3
text = "Output size (bytes)"

[node name="Value" type="SpinBox" parent="Widgets/OutputSize"]
layout_mode = 2
min_value = 16.0
max_value = 128.0
value = 32.0

[node name="Hash" type="Button" parent="Widgets"]
layout_mode = 2
text = "Hash"

[node name="Output" type="LineEdit" parent="Widgets"]
layout_mode = 2
placeholder_text = "Result"
editable = false

[node name="InvalidSalt" type="Label" parent="Widgets"]
visible = false
layout_mode = 2
text = "Salt provided is invalid, must be valid base64 encoding 16 bytes"

[connection signal="pressed" from="Widgets/Salt/Randomize" to="." method="_on_randomize_pressed"]
[connection signal="pressed" from="Widgets/Hash" to="." method="_on_hash_pressed"]
